Remove defmt and depend only on RTT stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2021"
 atsamd-hal = { version = "0.15.1", default-features = false, features = ["samd21j-rt", "unproven"] }
 cortex-m = "0.7"
 cortex-m-rt = { version = "0.7", features = ["device"] }
-defmt = "0.3"
-defmt-rtt = "0.3"
-panic-probe = { version = "0.3", features = ["print-defmt"] }
+rtt-target = { version = "0.3.0", features = ["cortex-m"] }
+panic-probe = "0.3"
